changed sidebar sizing, fixed gap at top, add functionality

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 3em 0em 0em 0em;
+    padding-top: 3em;
     background-color: var(--sidebar-bgcolor);
     height: 100vh;
     width: 20%;
@@ -30,6 +30,10 @@ img {
 
 .sidebar-title {
     font-size: xx-large;
+}
+
+.signature {
+    
 }
 
 
@@ -51,3 +55,24 @@ img {
     background-color: var(--card-bgcolor);
 }
 
+/* --- modal ---- */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rbga(245,40,145,0.8); 
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
